Add toy example image
Added correct lookup table used for the paper and a synthetic toy example image

--- a/local_spacing.ipynb
+++ b/local_spacing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "8876fdec-4127-4c83-9c4b-90282c9150b0",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "d32367d0-d5ab-470d-a646-a82ebbacdb66",
    "metadata": {},
    "outputs": [],
@@ -39,12 +39,12 @@
     "            rSq = distSqValues[rSqInd]\n",
     "            maxi = 0\n",
     "            r = 1 + floor(sqrt(rSq))\n",
-    "            scank = None #int\n",
-    "            scankj = None #int\n",
-    "            dk = None #int\n",
-    "            dkji = None #int \n",
-    "            iBall = None #int\n",
-    "            iPlus = None #int\n",
+    "            scank = None\n",
+    "            scankj = None\n",
+    "            dk = None\n",
+    "            dkji = None\n",
+    "            iBall = None\n",
+    "            iPlus = None\n",
     "            for k in range(r+1):\n",
     "                scank = k * k\n",
     "                dk = (k - dzAbs) * (k - dzAbs)\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "53001b16-c956-42e9-bfa7-1bad3ee60926",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "0187f950-2393-48bd-804c-39a08d83f070",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "beeb0099-b76b-4538-94da-6b0612a56dff",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
     "            for i in range(w):\n",
     "                ind = i + w * j\n",
     "                occurs[floor(sk[ind] * sk[ind] + 0.5)] = True\n",
-    "    numRadii = 0 #int\n",
+    "    numRadii = 0\n",
     "    for i in range(rSqMax):\n",
     "        if (occurs[i]):\n",
     "            numRadii+=1\n",
@@ -148,7 +148,7 @@
     "    # Make an index of the distance-squared values\n",
     "    distSqIndex = np.full(rSqMax, 0)\n",
     "    distSqValues = np.full(numRadii, 0)\n",
-    "    indDS = 0 #int\n",
+    "    indDS = 0\n",
     "    for i in range(rSqMax):\n",
     "        if (occurs[i]):\n",
     "            distSqIndex[i] = indDS\n",
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "fec6ff34-fb1b-4d31-8633-eb3b2ab78d49",
    "metadata": {},
    "outputs": [],
@@ -384,8 +384,7 @@
     "    dist_ridges = distanceRidges(dist_img)\n",
     "    # local thickness\n",
     "    local_thickness = localThickness(copy.deepcopy(dist_ridges))\n",
-    "    # clean up\n",
-    "    \n",
+    "     \n",
     "    # visualization\n",
     "    cmap = np.loadtxt('LUT_fire.csv',delimiter=',')# load csv of colormap\n",
     "    # construct cmap\n",
